src/snapshots/cargo_semver_checks__query__tests__function_must_use_added.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/function_must_use_added/": [
        {
            "name": String("FunctionToMustUseFunction"),
            "new_attr": String("#[must_use]"),
            "path": List([
                String("function_must_use_added"),
                String("FunctionToMustUseFunction"),
            ]),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("FunctionToMustUseMessageFunction"),
            "new_attr": String("#[must_use = \"Foo\"]"),
            "path": List([
                String("function_must_use_added"),
                String("FunctionToMustUseMessageFunction"),
            ]),
            "span_begin_line": Uint64(8),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
