src/snapshots/cargo_semver_checks__query__tests__function_now_doc_hidden.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/function_now_doc_hidden/": [
        {
            "function_name": String("my_function"),
            "path": List([
                String("function_now_doc_hidden"),
                String("MyPublicMod"),
                String("my_function"),
            ]),
            "span_begin_line": Uint64(13),
            "span_filename": String("src/lib.rs"),
        },
        {
            "function_name": String("my_function"),
            "path": List([
                String("function_now_doc_hidden"),
                String("MyNestedPublicMod"),
                String("PublicInnerMod"),
                String("my_function"),
            ]),
            "span_begin_line": Uint64(38),
            "span_filename": String("src/lib.rs"),
        },
        {
            "function_name": String("my_function"),
            "path": List([
                String("function_now_doc_hidden"),
                String("my_function"),
            ]),
            "span_begin_line": Uint64(47),
            "span_filename": String("src/lib.rs"),
        },
        {
            "function_name": String("my_function_with_types"),
            "path": List([
                String("function_now_doc_hidden"),
                String("my_function_with_types"),
            ]),
            "span_begin_line": Uint64(50),
            "span_filename": String("src/lib.rs"),
        },
    ],
}
