src/snapshots/cargo_semver_checks__query__tests__function_parameter_count_changed.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/parameter_count_changed/": [
        {
            "current_parameter_count": Uint64(2),
            "name": String("function_with_a_parameter_added"),
            "old_parameter_count": Uint64(1),
            "path": List([
                String("parameter_count_changed"),
                String("function_with_a_parameter_added"),
            ]),
            "span_begin_line": Uint64(1),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "current_parameter_count": Uint64(0),
            "name": String("function_with_parameters_removed"),
            "old_parameter_count": Uint64(2),
            "path": List([
                String("parameter_count_changed"),
                String("function_with_parameters_removed"),
            ]),
            "span_begin_line": Uint64(3),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
