src/snapshots/cargo_semver_checks__query__tests__function_unsafe_added.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/function_unsafe_added/": [
        {
            "name": String("add"),
            "path": List([
                String("function_unsafe_added"),
                String("add"),
            ]),
            "span_begin_line": Uint64(1),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
