src/snapshots/cargo_semver_checks__query__tests__inherent_method_missing.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/inherent_method_const_removed/": [
        {
            "method_name": String("associated_fn_removed"),
            "method_visibility": String("public"),
            "name": String("Foo"),
            "path": List([
                String("inherent_method_const_removed"),
                String("Foo"),
            ]),
            "span_begin_line": Uint64(12),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("method_removed"),
            "method_visibility": String("public"),
            "name": String("Foo"),
            "path": List([
                String("inherent_method_const_removed"),
                String("Foo"),
            ]),
            "span_begin_line": Uint64(14),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/inherent_method_missing/": [
        {
            "method_name": String("will_be_removed_associated_fn"),
            "method_visibility": String("public"),
            "name": String("Foo"),
            "path": List([
                String("inherent_method_missing"),
                String("Foo"),
            ]),
            "span_begin_line": Uint64(7),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("will_be_removed_method"),
            "method_visibility": String("public"),
            "name": String("Foo"),
            "path": List([
                String("inherent_method_missing"),
                String("Foo"),
            ]),
            "span_begin_line": Uint64(9),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/inherent_method_unsafe_added/": [
        {
            "method_name": String("associated_fn_removed"),
            "method_visibility": String("public"),
            "name": String("Foo"),
            "path": List([
                String("inherent_method_unsafe_added"),
                String("Foo"),
            ]),
            "span_begin_line": Uint64(12),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("method_removed"),
            "method_visibility": String("public"),
            "name": String("Foo"),
            "path": List([
                String("inherent_method_unsafe_added"),
                String("Foo"),
            ]),
            "span_begin_line": Uint64(14),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/struct_becomes_enum/": [
        {
            "method_name": String("will_be_removed_associated_fn"),
            "method_visibility": String("public"),
            "name": String("TupleToEnum"),
            "path": List([
                String("struct_becomes_enum"),
                String("TupleToEnum"),
            ]),
            "span_begin_line": Uint64(53),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("will_be_removed_method"),
            "method_visibility": String("public"),
            "name": String("TupleToEnum"),
            "path": List([
                String("struct_becomes_enum"),
                String("TupleToEnum"),
            ]),
            "span_begin_line": Uint64(55),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("will_be_removed_associated_fn"),
            "method_visibility": String("public"),
            "name": String("StructToEnum"),
            "path": List([
                String("struct_becomes_enum"),
                String("StructToEnum"),
            ]),
            "span_begin_line": Uint64(72),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("will_be_removed_method"),
            "method_visibility": String("public"),
            "name": String("StructToEnum"),
            "path": List([
                String("struct_becomes_enum"),
                String("StructToEnum"),
            ]),
            "span_begin_line": Uint64(74),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
