src/snapshots/cargo_semver_checks__query__tests__inherent_method_must_use_added.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/inherent_method_must_use_added/": [
        {
            "method_name": String("AssociatedFnToMustUse"),
            "method_visibility": String("public"),
            "name": String("EnumWithMustUseMethods"),
            "new_attr": String("#[must_use]"),
            "owner_type": String("Enum"),
            "path": List([
                String("inherent_method_must_use_added"),
                String("enum_inherent_method_must_use_added"),
                String("EnumWithMustUseMethods"),
            ]),
            "span_begin_line": Uint64(9),
            "span_filename": String("src/enum_inherent_method_must_use_added.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("AssociatedFnToMustUseMessage"),
            "method_visibility": String("public"),
            "name": String("EnumWithMustUseMethods"),
            "new_attr": String("#[must_use = \"Foo\"]"),
            "owner_type": String("Enum"),
            "path": List([
                String("inherent_method_must_use_added"),
                String("enum_inherent_method_must_use_added"),
                String("EnumWithMustUseMethods"),
            ]),
            "span_begin_line": Uint64(12),
            "span_filename": String("src/enum_inherent_method_must_use_added.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("MethodToMustUseMethod"),
            "method_visibility": String("public"),
            "name": String("EnumWithMustUseMethods"),
            "new_attr": String("#[must_use]"),
            "owner_type": String("Enum"),
            "path": List([
                String("inherent_method_must_use_added"),
                String("enum_inherent_method_must_use_added"),
                String("EnumWithMustUseMethods"),
            ]),
            "span_begin_line": Uint64(15),
            "span_filename": String("src/enum_inherent_method_must_use_added.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("MethodToMustUseMessageMethod"),
            "method_visibility": String("public"),
            "name": String("EnumWithMustUseMethods"),
            "new_attr": String("#[must_use = \"Foo\"]"),
            "owner_type": String("Enum"),
            "path": List([
                String("inherent_method_must_use_added"),
                String("enum_inherent_method_must_use_added"),
                String("EnumWithMustUseMethods"),
            ]),
            "span_begin_line": Uint64(18),
            "span_filename": String("src/enum_inherent_method_must_use_added.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("AssociatedFnToMustUse"),
            "method_visibility": String("public"),
            "name": String("StructWithMustUseMethods"),
            "new_attr": String("#[must_use]"),
            "owner_type": String("Struct"),
            "path": List([
                String("inherent_method_must_use_added"),
                String("struct_inherent_method_must_use_added"),
                String("StructWithMustUseMethods"),
            ]),
            "span_begin_line": Uint64(7),
            "span_filename": String("src/struct_inherent_method_must_use_added.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("AssociatedFnToMustUseMessage"),
            "method_visibility": String("public"),
            "name": String("StructWithMustUseMethods"),
            "new_attr": String("#[must_use = \"Foo\"]"),
            "owner_type": String("Struct"),
            "path": List([
                String("inherent_method_must_use_added"),
                String("struct_inherent_method_must_use_added"),
                String("StructWithMustUseMethods"),
            ]),
            "span_begin_line": Uint64(10),
            "span_filename": String("src/struct_inherent_method_must_use_added.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("MethodToMustUseMethod"),
            "method_visibility": String("public"),
            "name": String("StructWithMustUseMethods"),
            "new_attr": String("#[must_use]"),
            "owner_type": String("Struct"),
            "path": List([
                String("inherent_method_must_use_added"),
                String("struct_inherent_method_must_use_added"),
                String("StructWithMustUseMethods"),
            ]),
            "span_begin_line": Uint64(13),
            "span_filename": String("src/struct_inherent_method_must_use_added.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("MethodToMustUseMessageMethod"),
            "method_visibility": String("public"),
            "name": String("StructWithMustUseMethods"),
            "new_attr": String("#[must_use = \"Foo\"]"),
            "owner_type": String("Struct"),
            "path": List([
                String("inherent_method_must_use_added"),
                String("struct_inherent_method_must_use_added"),
                String("StructWithMustUseMethods"),
            ]),
            "span_begin_line": Uint64(16),
            "span_filename": String("src/struct_inherent_method_must_use_added.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("AssociatedFnToMustUse"),
            "method_visibility": String("public"),
            "name": String("UnionWithMustUseMethods"),
            "new_attr": String("#[must_use]"),
            "owner_type": String("Union"),
            "path": List([
                String("inherent_method_must_use_added"),
                String("union_inherent_method_must_use_added"),
                String("UnionWithMustUseMethods"),
            ]),
            "span_begin_line": Uint64(9),
            "span_filename": String("src/union_inherent_method_must_use_added.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("AssociatedFnToMustUseMessage"),
            "method_visibility": String("public"),
            "name": String("UnionWithMustUseMethods"),
            "new_attr": String("#[must_use = \"Foo\"]"),
            "owner_type": String("Union"),
            "path": List([
                String("inherent_method_must_use_added"),
                String("union_inherent_method_must_use_added"),
                String("UnionWithMustUseMethods"),
            ]),
            "span_begin_line": Uint64(12),
            "span_filename": String("src/union_inherent_method_must_use_added.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("MethodToMustUseMethod"),
            "method_visibility": String("public"),
            "name": String("UnionWithMustUseMethods"),
            "new_attr": String("#[must_use]"),
            "owner_type": String("Union"),
            "path": List([
                String("inherent_method_must_use_added"),
                String("union_inherent_method_must_use_added"),
                String("UnionWithMustUseMethods"),
            ]),
            "span_begin_line": Uint64(15),
            "span_filename": String("src/union_inherent_method_must_use_added.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("MethodToMustUseMessageMethod"),
            "method_visibility": String("public"),
            "name": String("UnionWithMustUseMethods"),
            "new_attr": String("#[must_use = \"Foo\"]"),
            "owner_type": String("Union"),
            "path": List([
                String("inherent_method_must_use_added"),
                String("union_inherent_method_must_use_added"),
                String("UnionWithMustUseMethods"),
            ]),
            "span_begin_line": Uint64(18),
            "span_filename": String("src/union_inherent_method_must_use_added.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
