src/snapshots/cargo_semver_checks__query__tests__inherent_method_unsafe_added.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/inherent_method_unsafe_added/": [
        {
            "method_name": String("associated_fn"),
            "method_visibility": String("public"),
            "name": String("Foo"),
            "non_matching_span_begin_line": List([
                Uint64(4),
            ]),
            "non_matching_span_filename": List([
                String("src/lib.rs"),
            ]),
            "path": List([
                String("inherent_method_unsafe_added"),
                String("Foo"),
            ]),
            "span_begin_line": Uint64(4),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "method_name": String("method"),
            "method_visibility": String("public"),
            "name": String("Foo"),
            "non_matching_span_begin_line": List([
                Uint64(8),
            ]),
            "non_matching_span_filename": List([
                String("src/lib.rs"),
            ]),
            "path": List([
                String("inherent_method_unsafe_added"),
                String("Foo"),
            ]),
            "span_begin_line": Uint64(8),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
