src/snapshots/cargo_semver_checks__query__tests__module_missing.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/module_missing/": [
        {
            "name": String("will_remove"),
            "path": List([
                String("module_missing"),
                String("bb"),
                String("will_remove"),
            ]),
            "span_begin_line": Uint64(8),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("will_make_private"),
            "path": List([
                String("module_missing"),
                String("will_make_private"),
            ]),
            "span_begin_line": Uint64(11),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_missing/": [
        {
            "name": String("my_pub_mod"),
            "path": List([
                String("trait_missing"),
                String("my_pub_mod"),
            ]),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_missing_with_major_bump/": [
        {
            "name": String("my_pub_mod"),
            "path": List([
                String("trait_missing_with_major_bump"),
                String("my_pub_mod"),
            ]),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
