src/snapshots/cargo_semver_checks__query__tests__pub_module_level_const_missing.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/pub_module_level_const_missing/": [
        {
            "name": String("PUB_CONST_IN_GLOBAL_WILL_REMOVE"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("PUB_CONST_IN_GLOBAL_WILL_REMOVE"),
            ]),
            "span_begin_line": Uint64(2),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_GLOBAL_WILL_RENAME"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("PUB_CONST_IN_GLOBAL_WILL_RENAME"),
            ]),
            "span_begin_line": Uint64(3),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_GLOBAL_WILL_BE_STATIC"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("PUB_CONST_IN_GLOBAL_WILL_BE_STATIC"),
            ]),
            "span_begin_line": Uint64(4),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_GLOBAL_WILL_BE_PRIVATE_CONST"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("PUB_CONST_IN_GLOBAL_WILL_BE_PRIVATE_CONST"),
            ]),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_GLOBAL_WILL_BE_PRIVATE_STATIC"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("PUB_CONST_IN_GLOBAL_WILL_BE_PRIVATE_STATIC"),
            ]),
            "span_begin_line": Uint64(6),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_MODULE_WILL_REMOVE"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("my_module"),
                String("PUB_CONST_IN_MODULE_WILL_REMOVE"),
            ]),
            "span_begin_line": Uint64(10),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_MODULE_WILL_RENAME"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("my_module"),
                String("PUB_CONST_IN_MODULE_WILL_RENAME"),
            ]),
            "span_begin_line": Uint64(11),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_MODULE_WILL_BE_STATIC"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("my_module"),
                String("PUB_CONST_IN_MODULE_WILL_BE_STATIC"),
            ]),
            "span_begin_line": Uint64(12),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_MODULE_WILL_BE_PRIVATE_CONST"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("my_module"),
                String("PUB_CONST_IN_MODULE_WILL_BE_PRIVATE_CONST"),
            ]),
            "span_begin_line": Uint64(13),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_MODULE_WILL_BE_PRIVATE_STATIC"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("my_module"),
                String("PUB_CONST_IN_MODULE_WILL_BE_PRIVATE_STATIC"),
            ]),
            "span_begin_line": Uint64(14),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_MODULE_WILL_RE_EXPORT_STATIC"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("my_module"),
                String("PUB_CONST_IN_MODULE_WILL_RE_EXPORT_STATIC"),
            ]),
            "span_begin_line": Uint64(16),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_NESTED_MODULE_WILL_REMOVE"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("my_module"),
                String("my_module_nested"),
                String("PUB_CONST_IN_NESTED_MODULE_WILL_REMOVE"),
            ]),
            "span_begin_line": Uint64(20),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_NESTED_MODULE_WILL_RENAME"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("my_module"),
                String("my_module_nested"),
                String("PUB_CONST_IN_NESTED_MODULE_WILL_RENAME"),
            ]),
            "span_begin_line": Uint64(21),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_NESTED_MODULE_WILL_BE_STATIC"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("my_module"),
                String("my_module_nested"),
                String("PUB_CONST_IN_NESTED_MODULE_WILL_BE_STATIC"),
            ]),
            "span_begin_line": Uint64(22),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_NESTED_MODULE_WILL_BE_PRIVATE_CONST"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("my_module"),
                String("my_module_nested"),
                String("PUB_CONST_IN_NESTED_MODULE_WILL_BE_PRIVATE_CONST"),
            ]),
            "span_begin_line": Uint64(23),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_NESTED_MODULE_WILL_BE_PRIVATE_STATIC"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("my_module"),
                String("my_module_nested"),
                String("PUB_CONST_IN_NESTED_MODULE_WILL_BE_PRIVATE_STATIC"),
            ]),
            "span_begin_line": Uint64(24),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_CONST_IN_NESTED_MODULE_WILL_RE_EXPORT_STATIC"),
            "path": List([
                String("pub_module_level_const_missing"),
                String("my_module"),
                String("my_module_nested"),
                String("PUB_CONST_IN_NESTED_MODULE_WILL_RE_EXPORT_STATIC"),
            ]),
            "span_begin_line": Uint64(26),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
