src/snapshots/cargo_semver_checks__query__tests__pub_static_missing.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/pub_static_missing/": [
        {
            "name": String("PUB_STATIC_IN_GLOBAL_WILL_REMOVE"),
            "path": List([
                String("pub_static_missing"),
                String("PUB_STATIC_IN_GLOBAL_WILL_REMOVE"),
            ]),
            "span_begin_line": Uint64(2),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_STATIC_IN_GLOBAL_WILL_RENAME"),
            "path": List([
                String("pub_static_missing"),
                String("PUB_STATIC_IN_GLOBAL_WILL_RENAME"),
            ]),
            "span_begin_line": Uint64(3),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_STATIC_IN_GLOBAL_WILL_BE_PRIVATE_CONST"),
            "path": List([
                String("pub_static_missing"),
                String("PUB_STATIC_IN_GLOBAL_WILL_BE_PRIVATE_CONST"),
            ]),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_STATIC_IN_GLOBAL_WILL_BE_PRIVATE_STATIC"),
            "path": List([
                String("pub_static_missing"),
                String("PUB_STATIC_IN_GLOBAL_WILL_BE_PRIVATE_STATIC"),
            ]),
            "span_begin_line": Uint64(6),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_STATIC_IN_MODULE_WILL_REMOVE"),
            "path": List([
                String("pub_static_missing"),
                String("my_module"),
                String("PUB_STATIC_IN_MODULE_WILL_REMOVE"),
            ]),
            "span_begin_line": Uint64(10),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_STATIC_IN_MODULE_WILL_RENAME"),
            "path": List([
                String("pub_static_missing"),
                String("my_module"),
                String("PUB_STATIC_IN_MODULE_WILL_RENAME"),
            ]),
            "span_begin_line": Uint64(11),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_STATIC_IN_MODULE_WILL_BE_PRIVATE_CONST"),
            "path": List([
                String("pub_static_missing"),
                String("my_module"),
                String("PUB_STATIC_IN_MODULE_WILL_BE_PRIVATE_CONST"),
            ]),
            "span_begin_line": Uint64(13),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_STATIC_IN_MODULE_WILL_BE_PRIVATE_STATIC"),
            "path": List([
                String("pub_static_missing"),
                String("my_module"),
                String("PUB_STATIC_IN_MODULE_WILL_BE_PRIVATE_STATIC"),
            ]),
            "span_begin_line": Uint64(14),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_STATIC_IN_NESTED_MODULE_WILL_REMOVE"),
            "path": List([
                String("pub_static_missing"),
                String("my_module"),
                String("my_module_nested"),
                String("PUB_STATIC_IN_NESTED_MODULE_WILL_REMOVE"),
            ]),
            "span_begin_line": Uint64(20),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_STATIC_IN_NESTED_MODULE_WILL_RENAME"),
            "path": List([
                String("pub_static_missing"),
                String("my_module"),
                String("my_module_nested"),
                String("PUB_STATIC_IN_NESTED_MODULE_WILL_RENAME"),
            ]),
            "span_begin_line": Uint64(21),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_STATIC_IN_NESTED_MODULE_WILL_BE_PRIVATE_CONST"),
            "path": List([
                String("pub_static_missing"),
                String("my_module"),
                String("my_module_nested"),
                String("PUB_STATIC_IN_NESTED_MODULE_WILL_BE_PRIVATE_CONST"),
            ]),
            "span_begin_line": Uint64(23),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PUB_STATIC_IN_NESTED_MODULE_WILL_BE_PRIVATE_STATIC"),
            "path": List([
                String("pub_static_missing"),
                String("my_module"),
                String("my_module_nested"),
                String("PUB_STATIC_IN_NESTED_MODULE_WILL_BE_PRIVATE_STATIC"),
            ]),
            "span_begin_line": Uint64(24),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
